<package format="2">
  <name>mpl_py</name>
  <version>1.0.0</version>
  <description>mpl_py</description>
  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>python3-rtree</depend>
  <depend>python3-parse</depend>

</package>
